feat(HttpResponse): HttpResponse 인스턴스 생성시 메서드별로 중복되는 부분을 제거하고자 Builder 도입